<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.food.FoodFragment">

    <TextView
        android:id="@+id/tvFood"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:text="@string/choose_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvFood"
        android:layout_below="@id/tvFood"
        android:layout_above="@id/layoutBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/layoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_btn2"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToDrink"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_btn"
            android:text="@string/continue_order"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>